fix(combobox-item): tweak center content font-weight and spacing

--- a/packages/calcite-components/src/components/combobox-item/combobox-item.scss
+++ b/packages/calcite-components/src/components/combobox-item/combobox-item.scss
@@ -12,7 +12,7 @@
 .scale--m {
   @apply text-n1h;
   --calcite-combobox-item-spacing-unit-l: theme("spacing.3");
-  --calcite-combobox-item-spacing-unit-s: theme("spacing.2");
+  --calcite-combobox-item-spacing-unit-s: theme("spacing[1.5]");
   --calcite-combobox-item-spacing-indent: theme("spacing.3");
   --calcite-combobox-item-selector-icon-size: theme("spacing.4");
   --calcite-combobox-item-description-font-size: var(--calcite-font-size-sm);
@@ -75,7 +75,11 @@ ul:focus {
 
 // selected state
 .label--selected {
-  @apply text-color-1 font-medium;
+  @apply text-color-1;
+
+  .title {
+    @apply font-medium;
+  }
 }
 
 .label--active {
@@ -145,7 +149,6 @@ ul:focus {
 
 .description {
   font-size: var(--calcite-combobox-item-description-font-size);
-  font-weight: var(--calcite-font-weight-normal);
 }
 
 :host([selected]),
@@ -157,4 +160,10 @@ ul:focus {
 
 .short-text {
   color: var(--calcite-color-text-3);
+}
+
+.title,
+.description,
+.short-text {
+  line-height: var(--calcite-font-line-height-relative-snug);
 }
